fix css dark mode

--- a/themes/minimal/css/blog.css
+++ b/themes/minimal/css/blog.css
@@ -449,7 +449,7 @@ pre code.hljs {
 
 .dark-mode pre code.hljs {
   font-size: 16px;
-  color: #2bc1ff;
+  color: #FFF;
 }
 
 .dark-mode .hljs-number {
